--- a/galeria.html
+++ b/galeria.html
@@ -55,7 +55,7 @@ fav
           <!-- Prawa kolumna: tekst -->
           <div class="col-12 col-md-8 text-center text-md-start">
             <h1
-              class="display-4 fw-bold text-center d-none d-md-block"
+              class="display-4 fw-bold text-center d-none d-md-block hero-title"
               style="color: #f5ed96"
             >
               Witamy w <span class="hero-span">PartyTime</span>
@@ -79,7 +79,7 @@ fav
               <a
                 href="kontakt.html"
                 class="btn btn-warning btn-lg"
-                style="background-color: #CFB53B; border: none; color: #000000"
+                style="background-color: #f5ed96; border: none; color: #000000"
               >
                 Skontaktuj się z nami
               </a>
@@ -96,7 +96,7 @@ fav
       </section>
 
 <section class="container my-5">
-    <h2 class="text-center fw-bold mb-4"><i class="fas fa-images" style="color: #CFB53B;"></i> Galeria</h2>
+    <h2 class="text-center fw-bold mb-4"><i class="fas fa-images" style="color: #f5ed96;"></i> Galeria</h2>
   <div id="partyCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <!-- Slajd 1 -->
