--- a/o_nas.html
+++ b/o_nas.html
@@ -55,7 +55,7 @@
           <!-- Prawa kolumna: tekst -->
           <div class="col-12 col-md-8 text-center text-md-start">
             <h1
-              class="display-4 fw-bold text-center d-none d-md-block"
+              class="display-4 fw-bold text-center d-none d-md-block hero-title"
               style="color: #f5ed96"
             >
               Witamy w <span class="hero-span">PartyTime</span>
@@ -79,7 +79,7 @@
               <a
                 href="kontakt.html"
                 class="btn btn-warning btn-lg"
-                style="background-color: #CFB53B; border: none; color: #000000"
+                style="background-color: #f5ed96; border: none; color: #000000"
               >
                 Skontaktuj się z nami
               </a>
@@ -99,7 +99,7 @@
       <section class="container my-5 d-flex justify-content-center about-section">
       
  <div class="text-center col-lg-8 col-md-10">
-      <h2 class="mb-4 fw-bold text-center"><i class="fas fa-heart" style="color: #CFB53B;"></i> O nas</h2>
+      <h2 class="mb-4 fw-bold text-center"><i class="fas fa-heart" style="color: #f5ed96;"></i> O nas</h2>
       <p class="lead text-center mb-5">
         <strong>PartyTime powstało z miłości do uśmiechu, radości i wyjątkowych chwil.</strong><br>
         Wierzymy, że każda impreza – mała czy duża – zasługuje na odrobinę magii. Dlatego od samego początku naszym celem było jedno: tworzyć wydarzenia, które zostają w sercu na długo po tym, jak opadnie konfetti.
