--- a/oferta.html
+++ b/oferta.html
@@ -56,7 +56,7 @@
           <!-- Prawa kolumna: tekst -->
           <div class="col-12 col-md-8 text-center text-md-start">
             <h1
-              class="display-4 fw-bold text-center d-none d-md-block"
+              class="display-4 fw-bold text-center d-none d-md-block hero-title"
               style="color: #f5ed96"
             >
               Witamy w <span class="hero-span">PartyTime</span>
@@ -80,7 +80,7 @@
               <a
                 href="kontakt.html"
                 class="btn btn-warning btn-lg"
-                style="background-color: #CFB53B; border: none; color: #000000"
+                style="background-color: #f5ed96; border: none; color: #000000"
               >
                 Skontaktuj się z nami
               </a>
@@ -97,7 +97,7 @@
       </section>
 
       <section class="container my-5">
-        <h2 class="text-center fw-bold mb-4"><i class="fas fa-star" style="color: #CFB53B;"></i> Nasze atrakcje</h2>
+        <h2 class="text-center fw-bold mb-4"><i class="fas fa-star" style="color: #f5ed96;"></i> Nasze atrakcje</h2>
         <div class="d-flex justify-content-center flex-wrap gap-3 my-4" id="oferta-selector">
             <div class="oferta-tile" data-show="fotobudka">
               <div class="emoji"><i class="fas fa-camera-retro"></i></div>
@@ -110,6 +110,18 @@
             <div class="oferta-tile" data-show="dekoracje">
               <div class="emoji"><i class="fas fa-palette"></i></div>
               <div class="label">Dekoracje</div>
+            </div>
+            <div class="oferta-tile" data-show="swiece">
+              <div class="emoji"><i class="fas fa-candle-holder"></i></div>
+              <div class="label">Świece</div>
+            </div>
+            <div class="oferta-tile" data-show="zaproszenia">
+              <div class="emoji"><i class="fas fa-envelope"></i></div>
+              <div class="label">Zaproszenia</div>
+            </div>
+            <div class="oferta-tile" data-show="papeteria">
+              <div class="emoji"><i class="fas fa-scroll"></i></div>
+              <div class="label">Papeteria</div>
             </div>
           </div>
       
