--- a/polityka.html
+++ b/polityka.html
@@ -56,7 +56,7 @@
           <!-- Prawa kolumna: tekst -->
           <div class="col-12 col-md-8 text-center text-md-start">
             <h1
-              class="display-4 fw-bold text-center d-none d-md-block"
+              class="display-4 fw-bold text-center d-none d-md-block hero-title"
               style="color: #f5ed96"
             >
               Witamy w <span class="hero-span">PartyTime</span>
@@ -80,7 +80,7 @@
               <a
                 href="kontakt.html"
                 class="btn btn-warning btn-lg"
-                style="background-color: #CFB53B; border: none; color: #000000"
+                style="background-color: #f5ed96; border: none; color: #000000"
               >
                 Skontaktuj się z nami
               </a>
@@ -107,8 +107,8 @@
 <section id="administrator" class="mb-3">
 <h2 class="h5">1. Administrator danych</h2>
 <p>
-Administratorem danych osobowych jest <strong>[Twoja firma/nazwa]</strong> z siedzibą w <strong>Gdańsku, ul. Warszawska 121, 80-180</strong>.
-Kontakt: <a href="mailto:[Twój e-mail]">ms.katy@wp.pl</a> | tel. <strong>[numer]</strong>.
+Administratorem danych osobowych jest <strong>Studio Gwiazd Inez Kacprzak</strong> z siedzibą w <strong>Gdańsku, ul. Warszawska 151, 80-180</strong>.
+Kontakt: <a href="mailto:kontakt@e-partytime.pl">kontakt@e-partytime.pl</a> | tel. <strong>570 504 607</strong>.
 </p>
 </section>
 
