--- a/sklep.html
+++ b/sklep.html
@@ -37,7 +37,7 @@
 
         .construction-icon {
             font-size: 6rem;
-            color: #FFD700;
+            color: #f5ed96;
             margin-bottom: 2rem;
             animation: bounce 2s ease-in-out infinite;
         }
@@ -63,7 +63,7 @@
 
         .coming-soon-card {
             background: linear-gradient(135deg, #2a2a2a 0%, #1a1a1a 100%);
-            border: 2px solid rgba(212, 175, 55, 0.3);
+            border: 2px solid rgba(245, 237, 150, 0.3);
             border-radius: 20px;
             padding: 2rem;
             margin: 1rem;
@@ -72,13 +72,13 @@
 
         .coming-soon-card:hover {
             transform: translateY(-10px);
-            border-color: #FFD700;
-            box-shadow: 0 15px 35px rgba(255, 215, 0, 0.3);
+            border-color: #f5ed96;
+            box-shadow: 0 15px 35px rgba(245, 237, 150, 0.3);
         }
 
         .feature-icon {
             font-size: 3rem;
-            color: #CFB53B;
+            color: #f5ed96;
             margin-bottom: 1rem;
             animation: sway-gentle 3s ease-in-out infinite;
         }
@@ -102,7 +102,7 @@
         }
 
         .progress-bar-fill {
-            background: linear-gradient(90deg, #FFD700, #CFB53B, #FFD700);
+            background: linear-gradient(90deg, #f5ed96, #f5ed96, #f5ed96);
             height: 20px;
             border-radius: 20px;
             width: 53%;
@@ -140,7 +140,7 @@
 
         .sparkle {
             position: absolute;
-            color: #FFD700;
+            color: #f5ed96;
             animation: sparkle-rotate 4s ease-in-out infinite;
         }
 
@@ -193,7 +193,7 @@
                             <div class="progress-bar-wrapper">
                                 <div class="progress-bar-fill"></div>
                             </div>
-                            <p class="text-center" style="color: #CFB53B;">Postęp: 53% ukończone</p>
+                            <p class="text-center" style="color: #f5ed96;">Postęp: 53% ukończone</p>
                         </div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
             <!-- COMING SOON FEATURES -->
             <section class="container my-5">
                 <h2 class="text-center fw-bold mb-5" style="color: #f5ed96;">
-                    <i class="fas fa-rocket" style="color: #CFB53B;"></i> Co znajdziesz w naszym sklepie?
+                    <i class="fas fa-rocket" style="color: #f5ed96;"></i> Co znajdziesz w naszym sklepie?
                 </h2>
                 
                 <div class="row g-4 justify-content-center">
@@ -211,7 +211,7 @@
                             <div class="feature-icon" style="animation-delay: 0s;">
                                 <i class="fas fa-birthday-cake"></i>
                             </div>
-                            <h4 style="color: #FFD700;">Świeczki</h4>
+                            <h4 style="color: #f5ed96;">Świeczki</h4>
                             <p style="color: #f5f5f5;">Piękne świeczki urodzinowe, cyferki i fontanny do każdej okazji.</p>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                             <div class="feature-icon" style="animation-delay: 1s;">
                                 <i class="fas fa-leaf"></i>
                             </div>
-                            <h4 style="color: #FFD700;">Wianki</h4>
+                            <h4 style="color: #f5ed96;">Wianki</h4>
                             <p style="color: #f5f5f5;">Dekoracyjne wianki i girlandy na każdą porę roku i okazję.</p>
                         </div>
                     </div>
@@ -231,7 +231,7 @@
                             <div class="feature-icon" style="animation-delay: 2s;">
                                 <i class="fas fa-box-open"></i>
                             </div>
-                            <h4 style="color: #FFD700;">Pakiety Imprezowe</h4>
+                            <h4 style="color: #f5ed96;">Pakiety Imprezowe</h4>
                             <p style="color: #f5f5f5;">Gotowe zestawy imprezowe - wszystko czego potrzebujesz w jednym pakiecie.</p>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
             <!-- TIMELINE -->
             <section class="container my-5">
                 <h2 class="text-center fw-bold mb-5" style="color: #f5ed96;">
-                    <i class="fas fa-calendar-alt" style="color: #CFB53B;"></i> Harmonogram otwarcia
+                    <i class="fas fa-calendar-alt" style="color: #f5ed96;"></i> Harmonogram otwarcia
                 </h2>
                 
                 <div class="row justify-content-center">
@@ -255,11 +255,11 @@
                                     <p class="mt-2"><strong>Październik 2024</strong><br>Koncepcja i planowanie</p>
                                 </div>
                                 <div class="text-center">
-                                    <i class="fas fa-cog fa-2x fa-spin" style="color: #FFD700;"></i>
+                                    <i class="fas fa-cog fa-2x fa-spin" style="color: #f5ed96;"></i>
                                     <p class="mt-2"><strong>Listopad 2024</strong><br>Rozwój platformy</p>
                                 </div>
                                 <div class="text-center">
-                                    <i class="fas fa-rocket fa-2x" style="color: #CFB53B;"></i>
+                                    <i class="fas fa-rocket fa-2x" style="color: #f5ed96;"></i>
                                     <p class="mt-2"><strong>Grudzień 2024</strong><br>Wielkie otwarcie!</p>
                                 </div>
                             </div>
