--- a/test-cookies.html
+++ b/test-cookies.html
@@ -22,7 +22,7 @@
             padding: 20px;
             border-radius: 8px;
             margin: 20px 0;
-            border-left: 4px solid #DAA520;
+            border-left: 4px solid #f5ed96;
         }
         pre {
             background: #2c3e50;
