--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           <!-- Prawa kolumna: tekst -->
           <div class="col-12 col-md-8 text-center text-md-start">
             <h1
-              class="display-4 fw-bold text-center d-none d-md-block hero-title"
+              class="display-4 fw-bold text-center hero-title"
               style="color: #f5ed96"
             >
               Witamy w <span class="hero-span">PartyTime</span>
             </h1>
             <p
-              class="lead mb-4 text-center d-none d-md-block"
+              class="lead mb-4 text-center"
               style="color: #f5ed96"
             >
               Wyjątkowe chwile zasługują na wyjątkową oprawę
