--- a/galeria.html
+++ b/galeria.html
@@ -96,7 +96,7 @@ fav
       </section>
 
 <section class="container my-5">
-    <h2 class="text-center fw-bold mb-4"><i class="fas fa-images" style="color: #f5ed96;"></i> Galeria</h2>
+    <h2 class="text-center fw-bold mb-4"><i class="fas fa-images" style="color: #f5ed96;"></i><span class="gold-highlight">Galeria</span></h2>
   <div id="partyCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <!-- Slajd 1 -->
