--- a/o_nas.html
+++ b/o_nas.html
@@ -99,7 +99,7 @@
       <section class="container my-5 d-flex justify-content-center about-section">
       
  <div class="text-center col-lg-8 col-md-10">
-      <h2 class="mb-4 fw-bold text-center"><i class="fas fa-heart" style="color: #f5ed96;"></i> O nas</h2>
+      <h2 class="mb-4 fw-bold text-center"><i class="fas fa-heart" style="color: #f5ed96;"></i><span class="gold-highlight">O nas</span></h2>
       <p class="lead text-center mb-5">
         <strong>PartyTime powstało z miłości do uśmiechu, radości i wyjątkowych chwil.</strong><br>
         Wierzymy, że każda impreza – mała czy duża – zasługuje na odrobinę magii. Dlatego od samego początku naszym celem było jedno: tworzyć wydarzenia, które zostają w sercu na długo po tym, jak opadnie konfetti.
