--- a/oferta.html
+++ b/oferta.html
@@ -97,30 +97,26 @@
       </section>
 
       <section class="container my-5">
-        <h2 class="text-center fw-bold mb-4"><i class="fas fa-star" style="color: #f5ed96;"></i> Nasze atrakcje</h2>
+        <h2 class="text-center fw-bold mb-4"><i class="fas fa-star" style="color: #f5ed96;"></i><span class="gold-highlight">Nasza oferta</span></h2>
         <div class="d-flex justify-content-center flex-wrap gap-3 my-4" id="oferta-selector">
             <div class="oferta-tile" data-show="fotobudka">
-              <div class="emoji"><i class="fas fa-camera-retro"></i></div>
+              <div class="emoji"><img src="resources/icons/camera.png" alt="Fotobudka" style="width: 40px; height: 40px;"></div>
               <div class="label">Fotobudka 360</div>
             </div>
             <div class="oferta-tile" data-show="maskotki">
-              <div class="emoji"><i class="fas fa-paw"></i></div>
+              <div class="emoji"><img src="resources/icons/paw.png" alt="Maskotki" style="width: 40px; height: 40px;"></div>
               <div class="label">Maskotki</div>
             </div>
             <div class="oferta-tile" data-show="dekoracje">
-              <div class="emoji"><i class="fas fa-palette"></i></div>
+              <div class="emoji"><img src="resources/icons/wedding-arch.png" alt="Dekoracje" style="width: 40px; height: 40px;"></div>
               <div class="label">Dekoracje</div>
             </div>
             <div class="oferta-tile" data-show="swiece">
-              <div class="emoji"><i class="fas fa-candle-holder"></i></div>
+              <div class="emoji"><img src="resources/icons/candles.png" alt="Świece" style="width: 40px; height: 40px;"></div>
               <div class="label">Świece</div>
             </div>
-            <div class="oferta-tile" data-show="zaproszenia">
-              <div class="emoji"><i class="fas fa-envelope"></i></div>
-              <div class="label">Zaproszenia</div>
-            </div>
             <div class="oferta-tile" data-show="papeteria">
-              <div class="emoji"><i class="fas fa-scroll"></i></div>
+              <div class="emoji"><img src="resources/icons/scroll.png" alt="Papeteria" style="width: 40px; height: 40px;"></div>
               <div class="label">Papeteria</div>
             </div>
           </div>
