--- a/polityka.html
+++ b/polityka.html
@@ -99,7 +99,7 @@
 <!--SECTION 1-->
       <section class="container my-5 d-flex justify-content-center about-section">
       <article class="card policy-card shadow-sm">
-<h1 class="h3">Polityka prywatności</h1>
+<h1 class="h3"><span class="gold-highlight">Polityka prywatności</span></h1>
 <p class="muted-small">Ostatnia aktualizacja: <strong>23 września 2025</strong></p>
 </header>
 
