--- a/oferta.html
+++ b/oferta.html
@@ -119,6 +119,14 @@
               <div class="emoji"><img src="resources/icons/scroll.png" alt="Papeteria" style="width: 40px; height: 40px;"></div>
               <div class="label">Papeteria</div>
             </div>
+            <div class="oferta-tile" data-show="podziekowania">
+              <div class="emoji"><img src="resources/icons/gift-box.png" alt="Podziękowania" style="width: 40px; height: 40px;"></div>
+              <div class="label">Podziękowania</div>
+            </div>
+            <div class="oferta-tile" data-show="boxy">
+              <div class="emoji"><img src="resources/icons/bouquet.png" alt="Boxy prezentowe" style="width: 40px; height: 40px;"></div>
+              <div class="label">Boxy prezentowe</div>
+            </div>
           </div>
       
         <div id="oferta-content" class="p-4 rounded shadow-sm">
