added cards, edit pngs

--- a/oferta.html
+++ b/oferta.html
@@ -104,7 +104,7 @@
               <div class="label">Fotobudka 360</div>
             </div>
             <div class="oferta-tile" data-show="maskotki">
-              <div class="emoji"><img src="resources/icons/paw.png" alt="Maskotki" style="width: 40px; height: 40px;"></div>
+              <div class="emoji"><img src="resources/icons/teddy-bear.png" alt="Maskotki" style="width: 40px; height: 40px;"></div>
               <div class="label">Maskotki</div>
             </div>
             <div class="oferta-tile" data-show="dekoracje">
@@ -120,11 +120,11 @@
               <div class="label">Papeteria</div>
             </div>
             <div class="oferta-tile" data-show="podziekowania">
-              <div class="emoji"><img src="resources/icons/gift-box.png" alt="Podziękowania" style="width: 40px; height: 40px;"></div>
+              <div class="emoji"><img src="resources/icons/bouquet.png" alt="Podziękowania" style="width: 40px; height: 40px;"></div>
               <div class="label">Podziękowania</div>
             </div>
             <div class="oferta-tile" data-show="boxy">
-              <div class="emoji"><img src="resources/icons/bouquet.png" alt="Boxy prezentowe" style="width: 40px; height: 40px;"></div>
+              <div class="emoji"><img src="resources/icons/gift-box.png" alt="Boxy prezentowe" style="width: 40px; height: 40px;"></div>
               <div class="label">Boxy prezentowe</div>
             </div>
           </div>
