now contact form

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="styles/fullwidth.css"/>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <!--SEO META TAGS-->
