--- a/kontakt.html
+++ b/kontakt.html
@@ -27,7 +27,7 @@
 
     <meta property="og:title" content="PartyTime – o nas">
     <meta property="og:description" content="Skontaktuj się z nami, aby zarezerwować atrakcje na swoją imprezę. Jesteśmy dostępni telefonicznie, mailowo i przez formularz.">
-    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
+    <meta property="og:image" content="https://www.e-partytime.plresources/logo.png">
     <meta property="og:url" content="https://www.e-partytime.pl/kontakt.html">
     <meta property="og:type" content="website">
     
@@ -144,7 +144,7 @@
               </div>
               <div class="col-md-5">
                 <div class="inquiry-type-card" data-type="shop">
-                  <div class="inquiry-icon"><img src="/resources/icons/shopping-bag.png" alt="Shop"></div>
+                  <div class="inquiry-icon"><img src="resources/icons/shopping-bag.png" alt="Shop"></div>
                   <h4>Chcę zapytać o produkty</h4>
                   <p>Interesują mnie papeteria, świece, wianki, podziękowania lub boxy prezentowe</p>
                 </div>
@@ -161,31 +161,31 @@
               <label class="form-label">Rodzaj imprezy:</label>
               <div class="event-types-grid">
                 <div class="event-type-option" data-value="Urodziny">
-                  <img src="/resources/icons/cake.png" alt="Urodziny">
+                  <img src="resources/icons/cake.png" alt="Urodziny">
                   <span>Urodziny</span>
                 </div>
                 <div class="event-type-option" data-value="Roczek">
-                  <img src="/resources/icons/baby.png" alt="Roczek">
+                  <img src="resources/icons/baby.png" alt="Roczek">
                   <span>Roczek</span>
                 </div>
                 <div class="event-type-option" data-value="Komunia">
-                  <img src="/resources/icons/church.png" alt="Komunia">
+                  <img src="resources/icons/church.png" alt="Komunia">
                   <span>Komunia</span>
                 </div>
                 <div class="event-type-option" data-value="Chrzest">
-                  <img src="/resources/icons/christianity.png" alt="Chrzest">
+                  <img src="resources/icons/christianity.png" alt="Chrzest">
                   <span>Chrzest</span>
                 </div>
                 <div class="event-type-option" data-value="Wesele">
-                  <img src="/resources/icons/groom.png" alt="Wesele">
+                  <img src="resources/icons/groom.png" alt="Wesele">
                   <span>Wesele</span>
                 </div>
                 <div class="event-type-option" data-value="Baby shower">
-                  <img src="/resources/icons/baby-carriage.png" alt="Baby shower">
+                  <img src="resources/icons/baby-carriage.png" alt="Baby shower">
                   <span>Baby shower</span>
                 </div>
                 <div class="event-type-option" data-value="Event firmowy">
-                  <img src="/resources/icons/suitcase.png" alt="Event firmowy">
+                  <img src="resources/icons/suitcase.png" alt="Event firmowy">
                   <span>Event firmowy</span>
                 </div>
                 <div class="event-type-option" data-value="Inne">
@@ -221,7 +221,7 @@
               <!-- Animacje i Atrakcje -->
               <div class="service-category" data-availability="event-only">
                 <div class="service-category-header" data-category="animacje">
-                  <img src="/resources/icons/favorites.png" alt="Animacje" class="category-icon">
+                  <img src="resources/icons/favorites.png" alt="Animacje" class="category-icon">
                   <h5>Animacje i Atrakcje</h5>
                   <i class="fas fa-chevron-down toggle-icon"></i>
                 </div>
@@ -297,7 +297,7 @@
               <!-- Dekoracje -->
               <div class="service-category" data-availability="event-only">
                 <div class="service-category-header" data-category="dekoracje">
-                  <img src="/resources/icons/wedding-arch.png" alt="Dekoracje" class="category-icon">
+                  <img src="resources/icons/wedding-arch.png" alt="Dekoracje" class="category-icon">
                   <h5>Dekoracje</h5>
                   <i class="fas fa-chevron-down toggle-icon"></i>
                 </div>
@@ -322,7 +322,7 @@
               <!-- Catering -->
               <div class="service-category" data-availability="event-only">
                 <div class="service-category-header" data-category="catering">
-                  <img src="/resources/icons/fork.png" alt="Catering" class="category-icon">
+                  <img src="resources/icons/fork.png" alt="Catering" class="category-icon">
                   <h5>Catering</h5>
                   <i class="fas fa-chevron-down toggle-icon"></i>
                 </div>
@@ -347,7 +347,7 @@
               <!-- Foto -->
               <div class="service-category" data-availability="event-only">
                 <div class="service-category-header" data-category="foto">
-                  <img src="/resources/icons/camera.png" alt="Foto" class="category-icon">
+                  <img src="resources/icons/camera.png" alt="Foto" class="category-icon">
                   <h5>Usługi foto</h5>
                   <i class="fas fa-chevron-down toggle-icon"></i>
                 </div>
@@ -368,7 +368,7 @@
               <!-- Produkty do kupienia -->
               <div class="service-category">
                 <div class="service-category-header" data-category="produkty">
-                  <img src="/resources/icons/shopping-bag.png" alt="Produkty" class="category-icon">
+                  <img src="resources/icons/shopping-bag.png" alt="Produkty" class="category-icon">
                   <h5>Produkty (można kupić bez eventu)</h5>
                   <i class="fas fa-chevron-down toggle-icon"></i>
                 </div>
