Add robots.txt and sitemap.xml for SEO optimization
- Created robots.txt to manage crawler access and disallow specific directories and files.
- Added crawl-delay settings for Googlebot and Bingbot.
- Blocked known bad bots (AhrefsBot, SemrushBot, DotBot).
- Introduced sitemap.xml to provide search engines with a structured list of site URLs, including last modified dates and priority settings.

--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,6 @@
     <script src="https://unpkg.com/@barba/core"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-fav
 
     <!--SEO META TAGS-->
     <meta name="description" content="Chwytamy chwile! Zobacz, jak wyglądają nasze atrakcje w akcji – fotobudka 360, pluszowe maskotki i kolorowe dekoracje.">
@@ -73,7 +72,8 @@ fav
               <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
               <span><i class="fas fa-palette"></i> Dekoracje</span>
               <span><i class="fas fa-paw"></i> Maskotki</span>
-              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
+              <span><i class="fas fa-scroll"></i> Podziękowania</span>
+              <span><i class="fas fa-gift"></i> Boxy prezentowe</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
