--- a/polityka.html
+++ b/polityka.html
@@ -17,15 +17,15 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!--SEO META TAGS-->
-    <meta name="description" content="PartyTime to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej..">
-    <meta name="keywords" content="fotobudki, dekoracje, maskotki, przebrania, imprezy, eventy, PartyTime, galeria, kontakt">
+    <meta name="description" content="Polityka prywatności PartyTime - informacje o ochronie danych osobowych i RODO.">
+    <meta name="keywords" content="polityka prywatności, RODO, ochrona danych, PartyTime">
     <meta name="author" content="PartyTime">
-    <meta property="og:title" content="PartyTime - polityka prywatności">
+    <meta property="og:title" content="PartyTime - Polityka prywatności">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:description" content="PartyTime to pasja do zabawy i doświadczenie w organizacji atrakcji. Poznaj nas bliżej.,">
+    <meta property="og:description" content="Polityka prywatności PartyTime - informacje o ochronie danych osobowych i RODO.">
     <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
-    <meta property="og:url" content="https://www.e-partytime.pl/o_nas.html">
+    <meta property="og:url" content="https://www.e-partytime.pl/polityka.html">
     <meta property="og:type" content="website">
     
 </head>
@@ -74,7 +74,8 @@
               <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
               <span><i class="fas fa-palette"></i> Dekoracje</span>
               <span><i class="fas fa-paw"></i> Maskotki</span>
-              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
+              <span><i class="fas fa-scroll"></i> Podziękowania</span>
+              <span><i class="fas fa-gift"></i> Boxy prezentowe</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
@@ -107,7 +108,7 @@
 <section id="administrator" class="mb-3">
 <h2 class="h5">1. Administrator danych</h2>
 <p>
-Administratorem danych osobowych jest <strong>Studio Gwiazd Inez Kacprzak</strong> z siedzibą w <strong>Gdańsku, ul. Warszawska 151, 80-180</strong>.
+Administratorem danych osobowych jest <strong>Studio Gwiazd Inez Kacprzak</strong> z siedzibą w <strong>Gdańsku, ul. Warszawska 129, 80-180</strong>.
 Kontakt: <a href="mailto:kontakt@e-partytime.pl">kontakt@e-partytime.pl</a> | tel. <strong>570 504 607</strong>.
 </p>
 </section>
