--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
               <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
               <span><i class="fas fa-palette"></i> Dekoracje</span>
               <span><i class="fas fa-paw"></i> Maskotki</span>
-              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
+              <span><i class="fas fa-scroll"></i> Podziękowania</span>
+              <span><i class="fas fa-gift"></i> Boxy prezentowe</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
@@ -334,26 +335,14 @@
 
 <div class="col-md-12 mt-4 text-center">
   <!-- WhatsApp -->
-  <a href="https://wa.me/123456789" target="_blank" class="mx-2 social-icon">
-    <img
-      src="resources/icons/whatsapp.png"
-      alt="WhatsApp"
-      style="width: 50px; height: 50px;"
-    />
+  <a href="https://wa.me/530170100" target="_blank" class="mx-2 social-icon">
+    <i class="fa-brands fa-whatsapp" style="font-size: 3rem; color: #f5ed96;"></i>
   </a>
   <a href="https://facebook.com/profile.php?id=61578947922828" target="_blank" class="mx-2 social-icon">
-    <img
-      src="resources/icons/facebook.png"
-      alt="Facebook"
-      style="width: 50px; height: 50px;"
-    />
+    <i class="fa-brands fa-facebook" style="font-size: 3rem; color: #f5ed96;"></i>
   </a>
   <a href="https://instagram.com/partytime.deluxe" target="_blank" class="mx-2 social-icon">
-    <img
-      src="resources/icons/instagram.png"
-      alt="Instagram"
-      style="width: 55px; height: 55px;"
-    />
+    <i class="fa-brands fa-instagram" style="font-size: 3rem; color: #f5ed96;"></i>
   </a>
 </div>
   </div>
