--- a/kontakt.html
+++ b/kontakt.html
@@ -25,9 +25,9 @@
     <meta property="og:title" content="PartyTime - Kontakt">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:title" content="PartyTime – o nas">
+    <meta property="og:title" content="PartyTime - Kontakt">
     <meta property="og:description" content="Skontaktuj się z nami, aby zarezerwować atrakcje na swoją imprezę. Jesteśmy dostępni telefonicznie, mailowo i przez formularz.">
-    <meta property="og:image" content="https://www.e-partytime.plresources/logo.png">
+    <meta property="og:image" content="https://www.e-partytime.pl/resources/logo.png">
     <meta property="og:url" content="https://www.e-partytime.pl/kontakt.html">
     <meta property="og:type" content="website">
     
@@ -77,7 +77,8 @@
               <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
               <span><i class="fas fa-palette"></i> Dekoracje</span>
               <span><i class="fas fa-paw"></i> Maskotki</span>
-              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
+              <span><i class="fas fa-scroll"></i> Podziękowania</span>
+              <span><i class="fas fa-gift"></i> Boxy prezentowe</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
