--- a/o_nas.html
+++ b/o_nas.html
@@ -74,6 +74,7 @@
               <span><i class="fas fa-palette"></i> Dekoracje</span>
               <span><i class="fas fa-paw"></i> Maskotki</span>
               <span><i class="fas fa-masks-theater"></i> Przebrania</span>
+              <span><i class="fas fa-gift"></i> Podziękowania</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
