--- a/oferta.html
+++ b/oferta.html
@@ -74,7 +74,8 @@
               <span><i class="fas fa-camera-retro"></i> Fotobudki</span>
               <span><i class="fas fa-palette"></i> Dekoracje</span>
               <span><i class="fas fa-paw"></i> Maskotki</span>
-              <span><i class="fas fa-masks-theater"></i> Przebrania</span>
+              <span><i class="fas fa-scroll"></i> Podziękowania</span>
+              <span><i class="fas fa-gift"></i> Boxy prezentowe</span>
             </div>
             <div class="conteiner d-flex justify-content-center mt-4">
               <a
