--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
     <title>404 - Strona nie znaleziona | PartyTime</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main_style.css">
-    <link rel="stylesheet" href="styles/effects.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/effects.css" media="print" onload="this.media='all'" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" media="print" onload="this.media='all'" />
     
     <meta name="description" content="Strona nie znaleziona (404). Powróć na stronę główną PartyTime.">
     <meta name="robots" content="noindex, follow">
