--- a/polityka.html
+++ b/polityka.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/policy.css">
-    <link rel="stylesheet" href="styles/effects.css">
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/@barba/core"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Defer non-critical CSS -->
+    <link rel="stylesheet" href="styles/effects.css" media="print" onload="this.media='all'" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" media="print" onload="this.media='all'" />
+    <noscript>
+      <link rel="stylesheet" href="styles/effects.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    </noscript>
 
     <!--SEO META TAGS-->
     <meta name="description" content="Polityka prywatności PartyTime - informacje o ochronie danych osobowych i RODO.">
@@ -199,6 +202,9 @@ wyłącznie na podstawie umów powierzenia przetwarzania danych i w zakresie nie
     <div id=footer-import></div>
   </div>
   
+<script src="bootstrap/js/bootstrap.bundle.min.js" defer></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+<script src="https://unpkg.com/@barba/core" defer></script>
 <script src="js/import.js" defer></script>
 <script src="js/active_link.js" defer></script>
 <script src="js/barba-setup.js" defer></script>
