Refactor code structure for improved readability and maintainability

--- a/polityka.html
+++ b/polityka.html
@@ -53,6 +53,8 @@
   src="resources/logo.jpg"
   alt="PartyTime Logo"
   class="img-fluid mx-auto d-block"
+  width="500"
+  height="500"
 />
           </div>
 
