--- a/500.html
+++ b/500.html
@@ -4,11 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>500 - Błąd serwera | PartyTime</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/main_style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Preload critical fonts (WOFF2) -->
+    <link rel="preload" as="font" type="font/woff2" href="resources/fonts/Birthstone/Birthstone-Regular.woff2" crossorigin />
+    <link rel="preload" as="font" type="font/woff2" href="resources/fonts/Dosis/Dosis-Regular.woff2" crossorigin />
+
+    <!-- Critical CSS inlined to eliminate render-blocking -->
+    <style>
+      @font-face{font-family:'Birthstone';src:url('resources/fonts/Birthstone/Birthstone-Regular.woff2') format('woff2');font-weight:normal;font-style:normal;font-display:swap}
+      @font-face{font-family:'Dosis';src:url('resources/fonts/Dosis/Dosis-Regular.woff2') format('woff2');font-weight:normal;font-style:normal;font-display:swap}
+      :root{--background:#000000;--logo-color:#f5ed96;--brand-color:#f5ed96;--text-primary:#f5f5f5;--hover-color:#FFA500;--section-bg:#1a1a1a;--gold-accent:#CFB53B;--card-bg:#2a2a2a}
+      *,::after,::before{box-sizing:border-box}
+      html,body{overflow-x:hidden;width:100%;font-family:'Dosis',sans-serif;margin:0;padding:0}
+      body{background-color:var(--section-bg);color:var(--text-primary);opacity:1;transition:opacity .5s ease-in-out}
+      .container{width:100%;padding-right:.75rem;padding-left:.75rem;margin-right:auto;margin-left:auto}
+      @media(min-width:576px){.container{max-width:540px}}
+      @media(min-width:768px){.container{max-width:720px}}
+      @media(min-width:992px){.container{max-width:960px}}
+      @media(min-width:1200px){.container{max-width:1140px}}
+      @media(min-width:1400px){.container{max-width:1320px}}
+      .row{display:flex;flex-wrap:wrap;margin-right:-.75rem;margin-left:-.75rem}
+      .col-12{flex:0 0 auto;width:100%;padding-right:.75rem;padding-left:.75rem}
+      @media(min-width:768px){.col-md-4{flex:0 0 auto;width:33.333333%;padding-right:.75rem;padding-left:.75rem}.col-md-6{flex:0 0 auto;width:50%;padding-right:.75rem;padding-left:.75rem}.col-md-8{flex:0 0 auto;width:66.666667%;padding-right:.75rem;padding-left:.75rem}}
+      .d-flex{display:flex!important}.flex-wrap{flex-wrap:wrap!important}.justify-content-center{justify-content:center!important}.align-items-center{align-items:center!important}
+      .text-center{text-align:center!important}
+      @media(min-width:768px){.text-md-start{text-align:left!important}}
+      .py-5{padding-top:3rem!important;padding-bottom:3rem!important}.mb-4{margin-bottom:1.5rem!important}.mt-4{margin-top:1.5rem!important}.mb-3{margin-bottom:1rem!important}
+      @media(min-width:768px){.mb-md-0{margin-bottom:0!important}}
+      .img-fluid{max-width:100%;height:auto}.mx-auto{margin-right:auto!important;margin-left:auto!important}.d-block{display:block!important}
+      .fw-bold{font-weight:700!important}.display-4{font-size:calc(1.475rem + 2.7vw);font-weight:300;line-height:1.2}
+      .lead{font-size:1.25rem;font-weight:300}
+      .btn{display:inline-block;font-weight:400;line-height:1.5;text-align:center;text-decoration:none;vertical-align:middle;cursor:pointer;user-select:none;border:1px solid transparent;padding:.375rem .75rem;font-size:1rem;border-radius:.375rem;transition:color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out}
+      .btn-lg{padding:.5rem 1rem;font-size:1.25rem;border-radius:.5rem}
+      .btn-warning{color:#000;background-color:#ffc107;border-color:#ffc107}
+      .sticky-top{position:sticky;top:0;z-index:1030}
+      .navbar{position:relative;top:0;left:0;right:0;width:100%;z-index:1030;background-color:var(--background);box-shadow:0 2px 6px rgba(245,237,150,.3);padding:1rem 2rem;border-bottom:1px solid var(--gold-accent)}
+      .navbar-brand{color:var(--brand-color);font-weight:700;font-size:1.8rem;font-family:'Birthstone',cursive;text-decoration:none}
+      .navbar-expand-lg .navbar-collapse{display:none}
+      .navbar-dark .navbar-toggler{color:var(--brand-color);border:none;font-size:1.4rem;background:0 0;padding:.25rem .75rem}
+      .navbar-dark .navbar-toggler-icon{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28245,237,150,1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");display:inline-block;width:1.5em;height:1.5em;vertical-align:middle;background-repeat:no-repeat;background-position:center;background-size:100%}
+      @media(min-width:992px){.navbar-expand-lg .navbar-collapse{display:flex!important}.navbar-expand-lg .navbar-toggler{display:none}}
+      .navbar-nav{display:flex;flex-direction:column;padding-left:0;margin-bottom:0;list-style:none}
+      @media(min-width:992px){.navbar-nav{flex-direction:row}.flex-lg-row{flex-direction:row!important}.ms-lg-auto{margin-left:auto!important}}
+      .nav-link{display:block;padding:.5rem 1rem;color:var(--text-primary);text-decoration:none;font-weight:500;font-size:1.1rem}
+      .nav-link.active{background-color:var(--brand-color)!important;color:#000!important;border:1px solid #000}
+      .collapse:not(.show){display:none}
+      .hero-section{background:var(--background);font-family:'Birthstone',cursive;padding-top:100px}
+      .hero-section h1,.hero-section p,.hero-section span,.hero-section a{font-family:'Birthstone',cursive!important;font-weight:bold!important}
+      .hero-span{color:#c9af39;font-family:'Birthstone',cursive}
+      .hero-title{font-family:'Birthstone',cursive}
+      .hero-section p.lead{font-size:1.8rem!important}
+      .hero-section .btn{font-family:'Dosis',sans-serif!important;font-size:1.2rem!important}
+      #nav-import{margin:0!important;padding:0!important}
+      #nav-import nav.navbar{position:sticky!important;top:0!important;z-index:2000!important;background-color:#1a1a1a!important}
+      h2{font-family:'Birthstone',cursive;font-size:2.5rem}
+      .normal-section h2,.fullwidth-bg h2,.container h2{color:var(--logo-color)!important;text-shadow:0 0 10px rgba(245,237,150,.3);font-family:'Birthstone',cursive}
+      main{min-height:60vh}
+    </style>
+
+    <!-- Defer all CSS (non-blocking) -->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" media="print" onload="this.media='all'" />
+    <link rel="stylesheet" href="styles/main_style.css" media="print" onload="this.media='all'" />
     <link rel="stylesheet" href="styles/effects.css" media="print" onload="this.media='all'" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" media="print" onload="this.media='all'" />
+    <noscript>
+      <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="styles/main_style.css" />
+      <link rel="stylesheet" href="styles/effects.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    </noscript>
     
     <meta name="description" content="Błąd serwera (500). Przepraszamy za niedogodności. Spróbuj ponownie później.">
     <meta name="robots" content="noindex, follow">
